--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "pnpm exec prettier . --write"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.11",
     "astro": "^5.7.13"
   },
   "devDependencies": {
